--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <main>
         <title>DCC202 - Atividade 4: Danrley Gonçalves Dias</title>
-        <p>
-            
-        </p>
+        <p>Esta é a página principal. Temos também a página sobre listas e tabelas.</p>
     </main>
 </body>
 </html>
