--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <main>
-        <title>DCC202 - Atividade 4: Danrley Gonçalves Dias</title>
-        <p>Esta é a página principal. Temos também a página sobre listas e tabelas.</p>
+        <h1>DCC202 - Atividade 4: Danrley Gonçalves Dias</h1>
+        <p>Esta é a página principal. Temos também a página sobre listas e tabelas.
+        <a href="listas.html"></a>
+        <a href="tabelas.html"></a></p>
+    
     </main>
 </body>
 </html>
