--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <main>
         <h1>DCC202 - Atividade 4: Danrley Gonçalves Dias</h1>
         <p>Esta é a página principal. Temos também a página sobre listas e tabelas.
-        <a href="listas.html"></a>
-        <a href="tabelas.html"></a></p>
+        <a href="listas.html"></a> 
+        <a href="tabelas.html"></a>
+    </p>
     
     </main>
 </body>
